--- a/src/app/admin/admin-home/admin-home.component.html
+++ b/src/app/admin/admin-home/admin-home.component.html
@@ -194,40 +194,6 @@
     <div id="editUserModal" class="fixed hidden flex bg-gray-500 bg-opacity-75 transition-opacity top-0 left-0 right-0 z-50 items-center justify-center w-full p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-full">
         <!-- Modal body -->
         <div class="my-4 space-y-6 w-[900px] h-full">
-            <!-- <div class="grid grid-cols-6 gap-6">
-                <div class="col-span-6 sm:col-span-3">
-                    <label for="team_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">First Name</label>
-                    <input type="text" name="team_name" id="team_name" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                </div>
-                <div class="col-span-6 sm:col-span-3">
-                    <label for="last-name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Last Name</label>
-                    <input type="text" name="last-name" id="last-name" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Green" required="">
-                </div>
-                <div class="col-span-6 sm:col-span-3">
-                    <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
-                    <input type="email" name="email" id="email" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="example@company.com" required="">
-                </div>
-                <div class="col-span-6 sm:col-span-3">
-                    <label for="phone-number" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Phone Number</label>
-                    <input type="number" name="phone-number" id="phone-number" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="e.g. +(12)3456 789" required="">
-                </div>
-                <div class="col-span-6 sm:col-span-3">
-                    <label for="department" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Department</label>
-                    <input type="text" name="department" id="department" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Development" required="">
-                </div>
-                <div class="col-span-6 sm:col-span-3">
-                    <label for="company" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Company</label>
-                    <input type="number" name="company" id="company" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="123456" required="">
-                </div>
-                <div class="col-span-6 sm:col-span-3">
-                    <label for="current-password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Current Password</label>
-                    <input type="password" name="current-password" id="current-password" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="••••••••" required="">
-                </div>
-                <div class="col-span-6 sm:col-span-3">
-                    <label for="new-password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">New Password</label>
-                    <input type="password" name="new-password" id="new-password" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="••••••••" required="">
-                </div>
-            </div> -->
             <!-- REGISTERING THE TEAM -->
             <div class="w-full bg-white rounded-lg shadow  border md:mt-0 border-gray-700">
                 <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
@@ -266,42 +232,42 @@
                             <!-- PLAYER 1 DETAILS -->
                             <label class="block mb-2 text-sm font-medium text-gray-900 text-center">Player 1</label>
                             <div>
-                                <label for="player_one_name" class="block mb-2 text-sm font-medium text-gray-900">Name</label>
-                                <input type="text" formControlName="player_one_name" id="player_one_name" placeholder="example: Royal Lions" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 placeholder-gray-400  focus:ring-blue-500  focus:border-blue-500" required="">
+                                <label for="edit_player_one_name" class="block mb-2 text-sm font-medium text-gray-900">Name</label>
+                                <input type="text" formControlName="player_one_name" id="edit_player_one_name" placeholder="example: Royal Lions" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 placeholder-gray-400  focus:ring-blue-500  focus:border-blue-500" required="">
                             </div>
                             <div>
-                                <label for="player_one_email" class="block mb-2 text-sm font-medium text-gray-900">Email</label>
-                                <input type="email" formControlName="player_one_email" id="player_one_email" placeholder="example: royal.lions@some.com" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 placeholder-gray-400  focus:ring-blue-500  focus:border-blue-500" required="">
+                                <label for="edit_player_one_email" class="block mb-2 text-sm font-medium text-gray-900">Email</label>
+                                <input type="email" formControlName="player_one_email" id="edit_player_one_email" placeholder="example: royal.lions@some.com" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 placeholder-gray-400  focus:ring-blue-500  focus:border-blue-500" required="">
                             </div>
                             <!-- PLAYER 2 DETAILS -->
                             <label class="block mb-2 text-sm font-medium text-gray-900 text-center">Player 2</label>
                             <div>
-                                <label for="player_two_name" class="block mb-2 text-sm font-medium text-gray-900">Name</label>
-                                <input type="text" formControlName="player_two_name" id="player_two_name" placeholder="example: Royal Lions" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 placeholder-gray-400  focus:ring-blue-500  focus:border-blue-500" required="">
+                                <label for="edit_player_two_name" class="block mb-2 text-sm font-medium text-gray-900">Name</label>
+                                <input type="text" formControlName="player_two_name" id="edit_player_two_name" placeholder="example: Royal Lions" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 placeholder-gray-400  focus:ring-blue-500  focus:border-blue-500" required="">
                             </div>
                             <div>
-                                <label for="player_two_email" class="block mb-2 text-sm font-medium text-gray-900">Email</label>
-                                <input type="email" formControlName="player_two_email" id="player_two_email" placeholder="example: royal.lions@some.com" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 placeholder-gray-400  focus:ring-blue-500  focus:border-blue-500" required="">
+                                <label for="edit_player_two_email" class="block mb-2 text-sm font-medium text-gray-900">Email</label>
+                                <input type="email" formControlName="player_two_email" id="edit_player_two_email" placeholder="example: royal.lions@some.com" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 placeholder-gray-400  focus:ring-blue-500  focus:border-blue-500" required="">
                             </div>
                             <!-- PLAYER 3 DETAILS -->
                             <label class="block mb-2 text-sm font-medium text-gray-900 text-center">Player 3</label>
                             <div>
-                                <label for="player_three_name" class="block mb-2 text-sm font-medium text-gray-900">Name</label>
-                                <input type="text" formControlName="player_three_name" id="player_three_name" placeholder="example: Royal Lions" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 placeholder-gray-400  focus:ring-blue-500  focus:border-blue-500" required="">
+                                <label for="pedit_layer_three_name" class="block mb-2 text-sm font-medium text-gray-900">Name</label>
+                                <input type="text" formControlName="player_three_name" id="edit_player_three_name" placeholder="example: Royal Lions" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 placeholder-gray-400  focus:ring-blue-500  focus:border-blue-500" required="">
                             </div>
                             <div>
-                                <label for="player_three_email" class="block mb-2 text-sm font-medium text-gray-900">Email</label>
-                                <input type="email" formControlName="player_three_email" id="player_three_email" placeholder="example: royal.lions@some.com" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 placeholder-gray-400  focus:ring-blue-500  focus:border-blue-500" required="">
+                                <label for="edit_player_three_email" class="block mb-2 text-sm font-medium text-gray-900">Email</label>
+                                <input type="email" formControlName="player_three_email" id="edit_player_three_email" placeholder="example: royal.lions@some.com" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 placeholder-gray-400  focus:ring-blue-500  focus:border-blue-500" required="">
                             </div>
                             <!-- PLAYER 4 DETAILS -->
                             <label class="block mb-2 text-sm font-medium text-gray-900 text-center">Player 4</label>
                             <div>
-                                <label for="player_four_name" class="block mb-2 text-sm font-medium text-gray-900">Name</label>
-                                <input type="text" formControlName="player_four_name" id="player_four_name" placeholder="example: Royal Lions" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 placeholder-gray-400  focus:ring-blue-500  focus:border-blue-500" required="">
+                                <label for="edit_player_four_name" class="block mb-2 text-sm font-medium text-gray-900">Name</label>
+                                <input type="text" formControlName="player_four_name" id="edit_player_four_name" placeholder="example: Royal Lions" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 placeholder-gray-400  focus:ring-blue-500  focus:border-blue-500" required="">
                             </div>
                             <div>
-                                <label for="player_four_email" class="block mb-2 text-sm font-medium text-gray-900">Email</label>
-                                <input type="email" formControlName="player_four_email" id="player_four_email" placeholder="example: royal.lions@some.com" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 placeholder-gray-400  focus:ring-blue-500  focus:border-blue-500" required="">
+                                <label for="edit_player_four_email" class="block mb-2 text-sm font-medium text-gray-900">Email</label>
+                                <input type="email" formControlName="player_four_email" id="edit_player_four_email" placeholder="example: royal.lions@some.com" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 placeholder-gray-400  focus:ring-blue-500  focus:border-blue-500" required="">
                             </div>
                         </form>
                     </div>
