--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,25 +7,33 @@
             <p class="underline mb-4 text-[#0E8388]">Wall of Fame</p>
             <div class="flex gap-1">
                 <div class="flex flex-col items-center">
-                    <img class="inline-block object-cover w-20 h-20 rounded-full border-[#ffd700] border-[5px]" src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="Profile image"/>
+                    <img *ngIf="wall_of_fame[0] else first" class="inline-block object-cover w-20 h-20 rounded-full border-[#ffd700] border-[5px]" [src]="wall_of_fame[0]" />
+                    <ng-template #first>
+                        <img class="inline-block object-cover w-20 h-20 rounded-full border-[#ffd700] border-[5px]" src="/assets/none.jpg">
+                    </ng-template>
                     <span class="text-lg mt-1 text-[#ffd700]">#1</span>
                 </div>
                 <div class="flex flex-col items-center">
-                    <img class="inline-block object-cover w-20 h-20 border-[#C0C0C0] border-[5px] rounded-full" src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="Profile image"/>
+                    <img *ngIf="wall_of_fame[1] else first" class="inline-block object-cover w-20 h-20 border-[#C0C0C0] border-[5px] rounded-full" [src]="wall_of_fame[1]"/>
                     <span class="text-lg mt-1 text-[#C0C0C0]">#2</span>
                 </div>
                 <div class="flex flex-col items-center">
-                    <img class="inline-block object-cover w-20 h-20 border-[#CD7F32] border-[5px] rounded-full" src="https://images.unsplash.com/photo-1530785602389-07594beb8b73?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="Profile image"/>
+                    <img *ngIf="wall_of_fame[2] else first" class="inline-block object-cover w-20 h-20 border-[#CD7F32] border-[5px] rounded-full" [src]="wall_of_fame[2]"/>
                     <span class="text-lg mt-1 text-[#CD7F32]">#3</span>
                 </div>
                 <!-- <img class="inline-block object-cover w-12 h-12 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="Profile image"/>
                 <img class="inline-block object-cover w-12 h-12 rounded-full" src="https://images.pexels.com/photos/2955305/pexels-photo-2955305.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="Profile image"/> -->
                 <div class="flex -space-x-4 items-center">
-                    <img class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="Profile image"/>
-                    <img class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80" alt="Profile image"/>
-                    <img class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" src="https://images.pexels.com/photos/2955305/pexels-photo-2955305.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="Profile image"/>
-                    <img class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" src="https://images.unsplash.com/photo-1488426862026-3ee34a7d66df?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1727&q=80" alt="Profile image"/>
-                    <img class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="Profile image"/>
+                    <img *ngIf="wall_of_fame[3] else second" class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" [src]="wall_of_fame[3]"/>
+                    <ng-template #second>
+                        <img class="inline-block object-cover w-16 h-16 rounded-full border-[#ffd700] border-[5px]" src="/assets/none.jpg">
+                    </ng-template>
+                    <img *ngIf="wall_of_fame[4] else second" class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" [src]="wall_of_fame[4]"/>
+                    <img *ngIf="wall_of_fame[5] else second" class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" [src]="wall_of_fame[5]"/>
+                    <img *ngIf="wall_of_fame[6] else second" class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" [src]="wall_of_fame[6]"/>
+                    <img *ngIf="wall_of_fame[7] else second" class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" [src]="wall_of_fame[7]"/>
+                    <img *ngIf="wall_of_fame[8] else second" class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" [src]="wall_of_fame[8]"/>
+                    <img *ngIf="wall_of_fame[9] else second" class="inline-block object-cover w-16 h-16 rounded-full border-2 border-white" [src]="wall_of_fame[9]"/>
                     <span class="flex items-center justify-center w-10 h-10 text-xs font-medium text-white bg-gray-700 border-2 border-white rounded-full" href="#">+99</span>
                 </div>
             </div>
@@ -35,7 +43,7 @@
         <div class="flex items-center">
             <div class="flex justify-between items-center cursor-pointer font-bold text-4xl rounded bg-yellow-300 px-4 py-2 leading-normal text-neutral-800 shadow-[0_4px_9px_-4px_#cbcbcb] transition duration-150 ease-in-out hover:bg-yellow-400  focus:bg-yellow-400" (click)="toggle_portfolio()">
                 <div class="relative inline-block mb-2">
-                    <img class="inline-block object-cover w-12 h-12 rounded-full" src="https://images.pexels.com/photos/2955305/pexels-photo-2955305.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="Profile image"/>
+                    <img class="inline-block object-cover w-12 h-12 rounded-full" [src]="my_details.profile_pic"/>
                     <span class="absolute bottom-0 right-0 inline-block w-3 h-3 bg-green-600 border-2 border-white rounded-full"></span>
                 </div>
                 <span class="ml-1">{{team_id?.toUpperCase()}}</span>
@@ -166,10 +174,64 @@
     </div>
 
     <!-- THE FOOTER WHICH CONTAINS LIVE TRANSACTION AND ROLL DICE BUTTON -->
-    <div class="flex justify-around w-full font-bold text-4xl pt-[20px] pb-2">
+    <div class="flex justify-around w-full font-bold pt-[20px] pb-2">
         <div class="w-[40%]">
-            <span class="underline">Live Transaction</span> <br>
-            <span class="font-normal text-xl bg-slate-200 p-1 roundes shadow">That team has won that !</span>
+            <span class="underline text-4xl">Live Transaction</span> <br>
+            <!-- RECENT TRANSACTION UPON GAIN -->
+            <div *ngIf="live_transaction.gain === 'true'">
+                <div *ngIf="live_transaction.amount === 'NONE'">
+                    <div  class="flex">
+                        <span>Team</span> &nbsp;
+                        <span class="uppercase text-blue-600">{{ live_transaction.team_id }}</span>: &nbsp;
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="green" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l7.5-7.5 7.5 7.5m-15 6l7.5-7.5 7.5 7.5" />
+                        </svg>
+                        <span class="capitalize">
+                            {{live_transaction.assets}}
+                        </span>
+                    </div>
+                </div>
+                <div *ngIf="live_transaction.amount != 'NONE'">
+                    <div  class="flex">
+                        <span>Team</span> &nbsp;
+                        <span class="uppercase text-blue-600">{{ live_transaction.team_id }}</span>: &nbsp;
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="green" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l7.5-7.5 7.5 7.5m-15 6l7.5-7.5 7.5 7.5" />
+                        </svg>
+                        <span>
+                            &nbsp; ${{live_transaction.amount}}
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- RECENT TRANSACTION UPON LOSS -->
+            <div *ngIf="live_transaction.gain === 'false'">
+                <div *ngIf="live_transaction.amount === 'NONE'">
+                    <div  class="flex">
+                        <span>Team</span> &nbsp;
+                        <span class="uppercase text-blue-600">{{ live_transaction.team_id }}</span>: &nbsp;
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="red" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 5.25l-7.5 7.5-7.5-7.5m15 6l-7.5 7.5-7.5-7.5" />
+                        </svg>
+                        <span class="capitalize">
+                            {{live_transaction.assets}}
+                        </span>
+                    </div>
+                </div>
+                <div *ngIf="live_transaction.amount != 'NONE'">
+                    <div  class="flex">
+                        <span>Team</span> &nbsp;
+                        <span class="uppercase text-blue-600">{{ live_transaction.team_id }}</span>: &nbsp;
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="red" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 5.25l-7.5 7.5-7.5-7.5m15 6l-7.5 7.5-7.5-7.5" />
+                        </svg>
+                        <span>
+                            &nbsp; ${{live_transaction.amount}}
+                        </span>
+                    </div>
+                </div>
+            </div>
         </div>
         <div>
             <div class="text-lg font-normal">Waiting Time: <span class="font-bold">{{waitCount}}</span></div>
@@ -213,11 +275,11 @@
           <div class="flex justify-between bg-white px-4 pb-4 pt-5 sm:p-6 sm:pb-4">
             <div class="flex w-[80%] justify-around">
                 <div class="relative inline-block mb-2">
-                    <img class="inline-block object-cover w-16 h-16 rounded-full" src="https://images.pexels.com/photos/2955305/pexels-photo-2955305.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="Profile image"/>
+                    <img class="inline-block object-cover w-16 h-16 rounded-full" [src]="my_details.profile_pic"/>
                     <span class="absolute bottom-0 right-0 inline-block w-4 h-4 bg-green-600 border-2 border-white rounded-full"></span>
                 </div>
                 <div class="w-[80%] mt-3 text-center sm:ml-4 sm:mt-0 sm:text-left">
-                    <h3 class="text-base font-semibold leading-6 text-gray-900" id="modal-title">Hi, {{ team_id?.toUpperCase() }}.</h3>
+                    <h3 class="text-base font-semibold leading-6 text-gray-900 capitalize" id="modal-title">Hi, {{ my_details.name }}.</h3>
                     <div class="mt-2">
                         <p class="text-sm text-gray-500">Following are the details about your assets, cash and net worth.</p>
                     </div>
@@ -233,22 +295,71 @@
             <div class="flex justify-around w-full">
                 <ul>
                     <span class="underline font-bold">Assets</span>
-                    <li>Restaurant</li>
-                    <li>Casino</li>
-                    <li>Fashion Retail</li>
+                    <li *ngFor="let asset of my_details.assets.split(',')" class="capitalize">
+                        {{asset}}
+                    </li>
+                    <!-- <li>{{my_details.assets}}</li> -->
+                    <!-- <li>Casino</li>
+                    <li>Fashion Retail</li> -->
                 </ul>
-                <p><span class="underline font-bold">Cash:</span> <br> 10200</p>
-                <p><span class="underline font-bold">Net Worth:</span> <br> 1000000</p>
+                <p><span class="underline font-bold">Cash:</span> <br> ${{ my_details.cash }}</p>
+                <p><span class="underline font-bold">Net Worth:</span> <br> ${{ my_details.net_worth }}</p>
             </div>
             <div class="mt-5 ml-5">
                 <span class="underline font-bold">Recent Transaction:</span><br>
-                <span>Team this got that.</span>
+
+                <!-- RECENT TRANSACTION UPON GAIN -->
+                <div *ngIf="my_details.recent_transaction.gain === 'true'">
+                    <div *ngIf="my_details.recent_transaction.amount === 'NONE'">
+                        <div  class="flex">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="green" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l7.5-7.5 7.5 7.5m-15 6l7.5-7.5 7.5 7.5" />
+                            </svg>
+                            <span class="capitalize">
+                                {{my_details.recent_transaction.assets}}
+                            </span>
+                        </div>
+                    </div>
+                    <div *ngIf="my_details.recent_transaction.amount != 'NONE'">
+                        <div  class="flex">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="green" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l7.5-7.5 7.5 7.5m-15 6l7.5-7.5 7.5 7.5" />
+                            </svg>
+                            <span>
+                                &nbsp; ${{my_details.recent_transaction.amount}}
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- RECENT TRANSACTION UPON LOSS -->
+                <div *ngIf="my_details.recent_transaction.gain === 'false'">
+                    <div *ngIf="my_details.recent_transaction.amount === 'NONE'">
+                        <div  class="flex">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="red" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 5.25l-7.5 7.5-7.5-7.5m15 6l-7.5 7.5-7.5-7.5" />
+                            </svg>
+                            <span class="capitalize">
+                                {{my_details.recent_transaction.assets}}
+                            </span>
+                        </div>
+                    </div>
+                    <div *ngIf="my_details.recent_transaction.amount != 'NONE'">
+                        <div  class="flex">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="red" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 5.25l-7.5 7.5-7.5-7.5m15 6l-7.5 7.5-7.5-7.5" />
+                            </svg>
+                            <span>
+                                &nbsp; ${{my_details.recent_transaction.amount}}
+                            </span>
+                        </div>
+                    </div>
+                </div>
             </div>
           </div>
 
           <!-- CLOSE AND SIGN OUT BUTTON -->
           <div class="bg-gray-50 px-4 py-3 sm:flex sm:flex-row-reverse sm:px-6">
-            
             <button type="button" class="mt-3 inline-flex w-full justify-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:mt-0 sm:w-auto" (click)="toggle_portfolio()">Close</button>
           </div>
         </div>
